# alloy

./: .gitignore  README.md  README_zh.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
alloy/: __init__.py  agent.py  chat.py  convert.py  convert_cli.py  eval.py  eval_agent.py  generate.py  lora.py  serve.py  train.py
alloy/data/: __init__.py  dataloader.py
alloy/kernels/: __init__.py
alloy/models/: __init__.py  attention_block.py  cache.py  hybrid_model.py  mamba_block.py  mamba_kernels.py
configs/: autoresearch.yaml  medium.yaml  small.yaml  toy.yaml
docs/: agent-plan.md  autoresearch-integration.md  autoresearch-report.md  blog-en.md  blog-zh.md  roadmap.md  spec.md  v10-plan.md
scripts/: clean_xlam_data.py  combine_data.py  finetune_agent.py  gen_tool_data.py  qwen_agent.py  race_v9.py
tests/: test_attention_block.py  test_cache.py  test_convert.py  test_dataloader.py  test_generate.py  test_hybrid_model.py  test_lora.py  test_mamba_block.py  test_metal_kernels.py  test_train.py
