[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloy-mlx"
version = "0.1.0"
description = "Hybrid SSM-Attention language model on Apple Silicon with MLX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Alloy Contributors"},
]
keywords = ["mlx", "mamba", "ssm", "attention", "hybrid", "apple-silicon", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
]
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tiktoken>=0.5",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
serve = [
    "transformers>=4.40",
    "huggingface_hub>=0.20",
]
autoresearch = [
    "pyarrow>=18.0",
    "requests>=2.31",
    "rustbpe>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "transformers>=4.40",
    "huggingface_hub>=0.20",
]
all = [
    "alloy-mlx[serve,autoresearch,dev]",
]

[project.scripts]
alloy-chat = "alloy.chat:main"
alloy-serve = "alloy.serve:main"
alloy-convert = "alloy.convert_cli:main"
alloy-eval = "alloy.eval:main"

[project.urls]
Homepage = "https://github.com/gxcsoccer/alloy"
Repository = "https://github.com/gxcsoccer/alloy"
Issues = "https://github.com/gxcsoccer/alloy/issues"

[tool.setuptools.packages.find]
include = ["alloy*"]
